cart-code style refactor

--- a/src/main/resources/static/cart.html
+++ b/src/main/resources/static/cart.html
@@ -11,7 +11,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
     <script src="cart.js"></script>
-    <title>Document</title>
+    <title>GeekBrains market</title>
 </head>
 
 
