--- a/src/main/resources/static/auth.html
+++ b/src/main/resources/static/auth.html
@@ -10,18 +10,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
-    <script src="cart.js"></script>
+    <script src="index.js"></script>
+    <link rel="stylesheet" href="auth.css">
     <title>GeekBrains market</title>
 </head>
 
 
 <body>
-
 <div class="container" ng-controller="indexController">
 
     <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Обратно в магазин</a>
+            <a class="navbar-brand" href="cart.html">Корзина</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
                     aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarsExample02">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="auth.html">Login</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
@@ -45,44 +45,24 @@
 
 
     <h1>Market</h1>
+    <div class="password">
+        <h3 class="password_field_header">Авторизация:</h3>
+        <div class="password_fields">
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingInput" placeholder="Username">
+                <label for="floatingInput">Имя пользователя</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Пароль</label>
+            </div>
+            <div class="submit_btn">
+                <button class="btn btn-danger" ng-click="#">Принять</button>
+            </div>
+        </div>
 
-    <h3>Ваша корзина</h3>
-    <table class="table table-hover" cellpadding="" 0 cellspacing="0">
-        <tr>
-            <td>Артикул</td>
-            <td>Наименование</td>
-            <td>Количество</td>
-            <td>Цена</td>
-            <td>Сумма</td>
-            <td>Действие</td>
-        </tr>
-        <tbody>
-        <tr ng-repeat="p in ProductsList.cartMap">
-            <td>{{p.id}}</td>
-            <td>{{p.title}}</td>
-            <td><button type="button" class="btn btn-secondary" ng-click="deleteProductFromCart(p.id)"><b2>-</b2></button> {{p.amount}} <button type="button" class="btn btn-secondary" ng-click="addToCart(p.id)"><b2>+</b2></button></td>
-            <td>{{p.price}}</td>
-            <td>{{p.price*p.amount}}</td>
-            <td>
-                <button class="btn btn-danger" ng-click="deleteProductStringFromCart(p.id)">Удалить товар</button>
-            </td>
-        </tr>
-        </tbody>
-        <tbody>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>Итого</td>
-            <td>{{ProductsList.cartCost}}</td>
-            <td>
-                <button class="btn btn-danger" ng-click="clearCart()">Очистить корзину</button>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    </div>
 
 </div>
-
 </body>
 </html>
