--- a/src/main/resources/static/auth.html
+++ b/src/main/resources/static/auth.html
@@ -10,7 +10,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
-    <script src="index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
+    <script src="auth.js"></script>
     <link rel="stylesheet" href="auth.css">
     <title>GeekBrains market</title>
 </head>
@@ -46,19 +47,28 @@
 
     <h1>Market</h1>
     <div class="password">
-        <h3 class="password_field_header">Авторизация:</h3>
-        <div class="password_fields">
-            <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingInput" placeholder="Username">
-                <label for="floatingInput">Имя пользователя</label>
+        <form class="password_form" ng-submit="tryToAuth()" ng-show="!isUserLoggedIn()">
+            <h3 class="password_field_header">Авторизация:</h3>
+            <div class="password_fields">
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingInput" ng-model="user.username" placeholder="Username">
+                    <label for="floatingInput">Имя пользователя</label>
+                </div>
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="floatingPassword"  ng-model="user.password" placeholder="Password">
+                    <label for="floatingPassword">Пароль</label>
+                </div>
+                <div class="submit_btn">
+                    <button class="btn btn-danger" ng-click="#" type="submit">Принять</button>
+                </div>
             </div>
-            <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Пароль</label>
-            </div>
-            <div class="submit_btn">
-                <button class="btn btn-danger" ng-click="#">Принять</button>
-            </div>
+
+        </form>
+        <div>
+            <h3 ng-show="isUserLoggedIn()"><button class="btn btn-danger" ng-click="tryToLogout()" type="submit">Выйти</button></h3>
+        </div>
+        <div>
+            <h3><button class="btn btn-danger" ng-click="checkAuth()">Кто я?</button></h3>
         </div>
 
     </div>
