--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,6 +23,7 @@
     <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
         <div class="container-fluid">
             <a class="navbar-brand" href="cart.html">Корзина</a>
+            <a class="navbar-brand" href="orders.html">Заказы</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
