--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,8 +22,8 @@
 
     <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand" href="cart.html">Корзина</a>
-            <a class="navbar-brand" href="orders.html">Заказы</a>
+            <a class="navbar-brand" href="cart/cart.html">Корзина</a>
+            <a class="navbar-brand" href="orders/orders.html">Заказы</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarsExample02">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="auth.html">Login</a>
+                        <a class="nav-link active" aria-current="page" href="auth/auth.html">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
