--- a/src/main/resources/static/orders/orders.html
+++ b/src/main/resources/static/orders/orders.html
@@ -11,17 +11,18 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
-    <script src="orderDetails.js"></script>
+    <script src="orders.js"></script>
     <title>GeekBrains market</title>
 </head>
+
+
 <body>
 
 <div class="container" ng-controller="indexController">
 
     <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Обратно в магазин</a>
-            <a class="navbar-brand" href="orders.html">Заказы</a>
+            <a class="navbar-brand" href="../index.html">Обратно в магазин</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
                     aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarsExample02">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="auth.html">Login</a>
+                        <a class="nav-link active" aria-current="page" href="../auth/auth.html">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
@@ -45,39 +46,24 @@
 
 
     <h1>Market</h1>
-    <div class="form-floating">
-        <label>Номер заказа: {{OrderList.orderId}}</label>
-    </div>
-    <div class="form-floating">
-        <label>Дата создания: {{OrderList.createdAt}}</label>
-    </div>
-    <div class="form-floating mb-3">
-        <label>Сумма заказа: {{OrderList.totalPrice}}</label>
-    </div>
-    <div class="form-floating mb-3">
-        <label>Адрес доставки: {{OrderList.address}}</label>
-    </div>
-    <div class="form-floating">
-        <label>Телефон: {{OrderList.phone}}</label>
-    </div>
-    <div>
-        <button class="btn btn-danger" ng-click="loadOrders()">Детали заказа</button>
-    </div>
 
-    <h3>Позиции заказа</h3>
+
+    <h3>Ваши заказы:</h3>
     <table class="table table-hover" cellpadding="" 0 cellspacing="0">
         <tr>
-            <td>Наименование</td>
-            <td>Количество</td>
-            <td>Цена за единицу</td>
-            <td>Общая сумма</td>
+            <td>№ заказа</td>
+            <td>Дата</td>
+            <td>Сумма</td>
+            <td>Действия</td>
         </tr>
         <tbody>
-        <tr ng-repeat="p in OrderList.items">
-            <td>{{p.title}}</td>
-            <td>{{p.amount}}</td>
-            <td>{{p.pricePerProduct}}</td>
+        <tr ng-repeat="p in OrderList">
+            <td>{{p.orderId}}</td>
+            <td>{{p.createdAt}}</td>
             <td>{{p.totalPrice}}</td>
+            <td>
+                <button class="btn btn-danger" ng-click="goTo(p.orderId)">Детали заказа</button>
+            </td>
         </tr>
         </tbody>
     </table>
