--- a/front-service/src/main/resources/static/auth/auth.html
+++ b/front-service/src/main/resources/static/auth/auth.html
@@ -59,7 +59,7 @@
                     <label for="floatingPassword">Пароль</label>
                 </div>
                 <div class="submit_btn">
-                    <button class="btn btn-danger" ng-click="#" type="submit">Принять</button>
+                    <button class="btn btn-danger" ng-href="#" type="submit">Принять</button>
                 </div>
             </div>
 
