--- a/front-service/src/main/resources/static/cart/cart.html
+++ b/front-service/src/main/resources/static/cart/cart.html
@@ -56,7 +56,7 @@
             <input type="text" class="form-control" id="floatingInput2"  ng-model="orderInfo.phone" placeholder="Номер телефона">
         </div>
         <div class="submit_btn">
-            <button class="btn btn-danger" ng-click="#" type="submit">Создать заказ</button>
+            <button class="btn btn-danger" ng-href="#" type="submit">Создать заказ</button>
         </div>
     </form>
 
