--- a/front-service/src/main/resources/static/orders/orders.html
+++ b/front-service/src/main/resources/static/orders/orders.html
@@ -62,7 +62,7 @@
             <td>{{p.createdAt}}</td>
             <td>{{p.totalPrice}}</td>
             <td>
-                <button class="btn btn-danger" ng-href="goTo(p.orderId)">Детали заказа</button>
+                <button class="btn btn-danger" ng-click="goTo(p.orderId)">Детали заказа</button>
             </td>
         </tr>
         </tbody>
