--- a/front-service/src/main/resources/static/cart/cart.html
+++ b/front-service/src/main/resources/static/cart/cart.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">Обратно в магазин</a>
+            <a class="navbar-brand" href="http://localhost:8191/gbmarket/index.html">Главная страница</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
                     aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,15 +31,15 @@
             <div class="collapse navbar-collapse" id="navbarsExample02">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../auth/auth.html">Login</a>
+                        <a class="nav-link active" aria-current="page" href="http://localhost:8191/gbmarket/cart/cart.html">Корзина</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link active" aria-current="page" href="http://localhost:8191/gbmarket/orders/orders.html">Заказы</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="http://localhost:8191/gbmarket/auth/auth.html">Вход</a>
                     </li>
                 </ul>
-                <form>
-                    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-                </form>
             </div>
         </div>
     </nav>
