--- a/front-service/src/main/resources/static/index.html
+++ b/front-service/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html ng-app = "app">
+<html ng-app="app">
 
 
 <head>
@@ -22,24 +22,24 @@
 
     <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand" href="cart/cart.html">Корзина</a>
-            <a class="navbar-brand" href="orders/orders.html">Заказы</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="http://localhost:8191/gbmarket/index.html">Главная страница</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
+                    aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarsExample02">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="auth/auth.html">Login</a>
+                        <a class="nav-link active" aria-current="page" href="http://localhost:8191/gbmarket/cart/cart.html">Корзина</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link active" aria-current="page" href="http://localhost:8191/gbmarket/orders/orders.html">Заказы</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="http://localhost:8191/gbmarket/auth/auth.html">Вход</a>
                     </li>
                 </ul>
-                <form>
-                    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-                </form>
             </div>
         </div>
     </nav>
@@ -48,7 +48,7 @@
     <h1>Market</h1>
 
     <h3>Список товаров</h3>
-    <table class="table table-hover" cellpadding=""0 cellspacing="0">
+    <table class="table table-hover" cellpadding="" 0 cellspacing="0">
         <tr>
             <td>Артикул</td>
             <td>Наименование</td>
