--- a/front-service/src/main/resources/static/orderDetails/orderDetails.html
+++ b/front-service/src/main/resources/static/orderDetails/orderDetails.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-expand navbar-dark bg-dark" aria-label="Second navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand" href="http://localhost:8191/gbmarket/index.html">Главная страница</a>
+            <a class="navbar-brand" href="http://localhost:5555/market/index.html">Главная страница</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
                     aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,13 +29,13 @@
             <div class="collapse navbar-collapse" id="navbarsExample02">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:8191/gbmarket/cart/cart.html">Корзина</a>
+                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/cart/cart.html">Корзина</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:8191/gbmarket/orders/orders.html">Заказы</a>
+                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/orders/orders.html">Заказы</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:8191/gbmarket/auth/auth.html">Вход</a>
+                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/auth/auth.html">Вход</a>
                     </li>
                 </ul>
             </div>
