minor config upd

--- a/front-service/src/main/resources/static/index.html
+++ b/front-service/src/main/resources/static/index.html
@@ -61,9 +61,7 @@
             <td>{{p.title}}</td>
             <td>{{p.price}}</td>
             <td>
-                <button class="btn btn-primary" ng-click="showProductInfo(p.id)">Найти продукт</button>
-                <button class="btn btn-danger" ng-click="deleteProductById(p.id)">Delete</button>
-                <button class="btn btn-danger" ng-click="addToCart(p.id)">Add to Cart</button>
+                <button class="btn btn-primary" ng-click="addToCart(p.id)">Добавить в корзину</button>
             </td>
         </tr>
         </tbody>
