--- a/front-service/src/main/resources/static/cart/cart.html
+++ b/front-service/src/main/resources/static/cart/cart.html
@@ -37,7 +37,7 @@
                         <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/orders/orders.html">Заказы</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/auth/auth.html">Вход</a>
+                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/auth/auth.html">{{enterView}}</a>
                     </li>
                 </ul>
             </div>
