--- a/front-service/src/main/resources/static/index.html
+++ b/front-service/src/main/resources/static/index.html
@@ -31,13 +31,16 @@
             <div class="collapse navbar-collapse" id="navbarsExample02">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/cart/cart.html">Корзина</a>
+                        <a class="nav-link active" aria-current="page"
+                           href="http://localhost:5555/market/cart/cart.html">Корзина</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/orders/orders.html">Заказы</a>
+                        <a class="nav-link active" aria-current="page"
+                           href="http://localhost:5555/market/orders/orders.html">Заказы</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="http://localhost:5555/market/auth/auth.html">Вход</a>
+                        <a class="nav-link active" aria-current="page"
+                           href="http://localhost:5555/market/auth/auth.html">{{enterView}}</a>
                     </li>
                 </ul>
             </div>
@@ -48,6 +51,30 @@
     <h1>Market</h1>
 
     <h3>Список товаров</h3>
+    <div class="form-check">
+        <input class="form-check-input" ng-click="changeSort('ASC')" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
+        <label class="form-check-label" for="flexRadioDefault1">
+            По возрастанию
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" ng-click="changeSort('DESC')" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+        <label class="form-check-label" for="flexRadioDefault2">
+            По убыванию
+        </label>
+    </div>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" ng-click="changeSortBy('id')" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
+        <label class="form-check-label" for="inlineRadio1">По артикулу</label>
+    </div>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" ng-click="changeSortBy('title')" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+        <label class="form-check-label" for="inlineRadio2">По наименованию</label>
+    </div>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" ng-click="changeSortBy('price')" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option2">
+        <label class="form-check-label" for="inlineRadio2">По цене</label>
+    </div>
     <table class="table table-hover" cellpadding="" 0 cellspacing="0">
         <tr>
             <td>Артикул</td>
@@ -56,7 +83,7 @@
             <td>Действие</td>
         </tr>
         <tbody>
-        <tr ng-repeat="p in ProductsList">
+        <tr ng-repeat="p in ViewDTO.productList">
             <td>{{p.id}}</td>
             <td>{{p.title}}</td>
             <td>{{p.price}}</td>
@@ -66,6 +93,16 @@
         </tr>
         </tbody>
     </table>
+    <div class="footer_pages">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item" ng-repeat="n in ViewDTO.pages">
+                    <a class="page-link" ng-click="toPage(n)">{{n+1}}</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
 
 </div>
 
