--- a/front-service/src/main/resources/static/index.html
+++ b/front-service/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
     <script src="index.js"></script>
+    <link rel="stylesheet" href="index.css">
     <title>GeekBrains market</title>
 </head>
 
@@ -83,10 +84,10 @@
             <td>Действие</td>
         </tr>
         <tbody>
-        <tr ng-repeat="p in ViewDTO.productList">
-            <td>{{p.id}}</td>
-            <td>{{p.title}}</td>
-            <td>{{p.price}}</td>
+        <tr class="table_element" ng-repeat="p in ViewDTO.productList">
+            <td ng-click="goToProductInfo(p.id)">{{p.id}}</td>
+            <td ng-click="goToProductInfo(p.id)">{{p.title}}</td>
+            <td ng-click="goToProductInfo(p.id)">{{p.price}}</td>
             <td>
                 <button class="btn btn-primary" ng-click="addToCart(p.id)">Добавить в корзину</button>
             </td>
