fix order and product view

--- a/front-service/src/main/resources/static/productDetails/productDetails.html
+++ b/front-service/src/main/resources/static/productDetails/productDetails.html
@@ -9,7 +9,7 @@
         <label>Наименование: <h5>{{ProductFullInfo.title}}</h5></label>
     </div>
     <div class="form-floating">
-        <label>Стоимость: <h5>{{ProductFullInfo.price}}</h5></label>
+        <label>Стоимость: <h5>{{ProductFullInfo.price}} руб.</h5></label>
     </div>
     <div class="form-floating">
         <label>Описание: <h5>{{ProductFullInfo.description}}</h5></label>
