--- a/front-service/src/main/resources/static/orderDetails/orderDetails.html
+++ b/front-service/src/main/resources/static/orderDetails/orderDetails.html
@@ -17,19 +17,21 @@
     </div>
 
     <h3>Позиции заказа</h3>
-    <table class="table table-hover" cellpadding="" 0 cellspacing="0">
+    <table class="table table-hover table_element" cellpadding="" 0 cellspacing="0">
         <tr>
+            <td>Артикул</td>
             <td>Наименование</td>
             <td>Количество</td>
             <td>Цена за единицу</td>
             <td>Общая сумма</td>
         </tr>
         <tbody>
-        <tr ng-repeat="p in OrderList.items">
+        <tr ng-click="goToProductInfo(p.id)" ng-repeat="p in OrderList.items">
+            <td>{{p.id}}</td>
             <td>{{p.title}}</td>
             <td>{{p.amount}}</td>
-            <td>{{p.pricePerProduct}}</td>
-            <td>{{p.totalPrice}}</td>
+            <td>{{p.pricePerProduct}} руб.</td>
+            <td>{{p.totalPrice}} руб.</td>
         </tr>
         </tbody>
     </table>
