--- a/front-service/src/main/resources/static/orders/orders.html
+++ b/front-service/src/main/resources/static/orders/orders.html
@@ -3,15 +3,17 @@
     <h3>Ваши заказы:</h3>
     <table class="table table-hover" cellpadding="" 0 cellspacing="0">
         <tr>
-            <td>№ заказа</td>
+            <td>№</td>
             <td>Дата</td>
+            <td>Содержимое</td>
             <td>Сумма</td>
         </tr>
         <tbody>
         <tr class="table_element" ng-click="goTo(p.orderId)" ng-repeat="p in OrderList">
             <td >{{p.orderId}}</td>
             <td>{{p.createdAt}}</td>
-            <td>{{p.totalPrice}}</td>
+            <td>{{p.itemsView}}</td>
+            <td>{{p.totalPrice}} руб.</td>
         </tr>
         </tbody>
     </table>
