--- a/front-service/src/main/resources/static/index.html
+++ b/front-service/src/main/resources/static/index.html
@@ -43,6 +43,10 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page"
+                           href="#!/reg">Регистрация</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"
                            ng-show="!isAuthUser()" href="#!/auth">Вход</a>
                     </li>
                     <li class="nav-item">
@@ -60,6 +64,7 @@
     <script src="cart/cart.js"></script>
     <script src="store/store.js"></script>
     <script src="auth/auth.js"></script>
+    <script src="reg/reg.js"></script>
     <script src="startPage/startPage.js"></script>
     <script src="orders/orders.js"></script>
     <script src="orderDetails/orderDetails.js"></script>
