--- a/front-service/src/main/resources/static/startPage/startPage.html
+++ b/front-service/src/main/resources/static/startPage/startPage.html
@@ -1,5 +1,5 @@
 <div>
-    <h5>Добро пожаловать в интернет магазин, {{UserInfo.name}}.</h5>
+    <h5>Добро пожаловать в интернет магазин, {{name}}.</h5>
     <h5 ng-show="!isAuthUser()">Для того что бы совершать покупки необходимо авторизоваться.</h5>
 
 </div>
