--- a/front-service/src/main/resources/static/index.html
+++ b/front-service/src/main/resources/static/index.html
@@ -34,6 +34,11 @@
                         <a class="nav-link active" aria-current="page"
                            href="#!/store">Каталог товаров</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active"
+                           href="#!/productFactory">Добавить продукт</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active"
                            href="#!/cart">Корзина</a>
                     </li>
@@ -69,6 +74,7 @@
     <script src="orders/orders.js"></script>
     <script src="orderDetails/orderDetails.js"></script>
     <script src="productDetails/productDetails.js"></script>
+    <script src="productFactory/productAdder.js"></script>
 </div>
 
 </body>
